# o-ran

./: CMakeLists.txt  ConsoleWriter.cpp  ConsoleWriter.h  IReader.h  IWriter.h  JSONReader.cpp  JSONReader.h  main.cpp
reader/: JSONReader.cpp  JSONReader.h
writer/: HTTPWriter.cpp  HTTPWriter.h
